--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="heading">Arshad hossain</h1>
-    <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste est enim assumenda voluptatum facere blanditiis nostrum nam modi quo voluptatibus obcaecati nemo, corporis fugit dolore distinctio sit amet necessitatibus veritatis!</P>
+    <h1 class="heading">HEaduing 1</h1>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, at.</P>
 </body>
 </html>
